--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/markdoc": "^0.15.9",
     "@astrojs/starlight": "^0.37.0",
+    "@astrojs/starlight-markdoc": "^0.5.1",
+    "@expressive-code/plugin-line-numbers": "^0.41.3",
     "astro": "^5.6.1",
+    "astro-expressive-code": "^0.41.3",
+    "rehype-external-links": "^3.0.0",
     "sharp": "^0.34.2"
   }
 }
