--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "astro-expressive-code": "^0.41.3",
     "rehype-external-links": "^3.0.0",
     "sharp": "^0.34.2",
-    "starlight-image-zoom": "^0.13.2"
+    "starlight-image-zoom": "^0.13.2",
+    "starlight-theme-galaxy": "^0.5.2"
   }
 }
