--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@six-tech/starlight-theme-six": "^1.0.16",
     "astro": "^5.6.1",
     "astro-expressive-code": "^0.41.3",
+    "astro-mermaid": "^1.2.0",
+    "mermaid": "^11.12.2",
     "rehype-external-links": "^3.0.0",
     "sharp": "^0.34.2",
     "starlight-image-zoom": "^0.13.2",
